--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.33.0",
     "embla-carousel-react": "^8.3.1",
     "geist": "^1.3.1",
