--- a/package.json
+++ b/package.json
@@ -33,21 +33,24 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.33.0",
     "embla-carousel-react": "^8.3.1",
     "geist": "^1.3.1",
     "lucide-react": "^0.454.0",
+    "net": "^1.0.2",
     "next": "^14.2.17",
     "next-auth": "5.0.0-beta.25",
+    "perf_hooks": "^0.0.1",
     "postgres": "^3.4.5",
     "react": "^18.3.1",
-    "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "tls": "^0.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
