--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "tls": "^0.0.1",
+    "winston": "^3.17.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
