--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.4",
+    "@radix-ui/react-toggle": "^1.1.1",
     "@t3-oss/env-nextjs": "^0.10.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -38,6 +40,7 @@
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.33.0",
     "embla-carousel-react": "^8.3.1",
+    "framer-motion": "^11.15.0",
     "geist": "^1.3.1",
     "lucide-react": "^0.454.0",
     "net": "^1.0.2",
