--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
+    "react-zoom-pan-pinch": "^3.6.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "tls": "^0.0.1",
