--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.16.4",
     "geist": "^1.3.1",
+    "lru-cache": "^11.0.2",
     "lucide-react": "^0.454.0",
     "net": "^1.0.2",
     "next": "^14.2.23",
