--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-zoom-pan-pinch": "^3.6.1",
+    "swr": "^2.3.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tls": "^0.0.1",
