--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-simple-image-viewer": "^1.2.2",
     "react-zoom-pan-pinch": "^3.6.1",
     "swr": "^2.3.2",
     "tailwind-merge": "^2.6.0",
