--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-icons": "^5.4.0",
     "react-simple-image-viewer": "^1.2.2",
     "react-zoom-pan-pinch": "^3.6.1",
+    "recharts": "^2.15.3",
     "swr": "^2.3.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
